[tool.poetry]
name = "etlp"
version = "0.1.0"
description = "Event-based Three-factor Local Plasticity"
authors = ["Fernando M. Quintana <fernando.quintana@uca.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.13.0"
tonic = "^1.2.2"
numpy = "^1.23.4"
tqdm = "^4.64.1"
plotly = "^5.11.0"
matplotlib = "^3.6.2"
tensorboard = "^2.11.0"
pandas = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
