[project]
name = "etlp"
description = "Event-based Three-factor Local Plasticity"
authors = [{name="Fernando M. Quintana", email="fernando.quintana@uca.es"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache License"}
dynamic = ["version"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch>=2.0.1",
    "tonic>=1.4.2",
    "tqdm>=4.64.1",
    "plotly>=5.11.0",
    "matplotlib>=3.6.2",
    "tensorboard>=2.11.0",
    "pandas>=1.5.1"
]

[project.optional-dependencies]
dev = [
    "black==23.9.1",
    "coverage==5.0.3",
    "isort==5.12.0",
    "docformatter==1.7.5",
]

[tool.setuptools.dynamic]
version = {attr = "ETLP.__version__"}

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"